# cython-encrypt-template

./: .gitignore  MANIFEST.in  Makefile  README.md  filter_files.py  package_tag.py  pyproject.toml  setup_b.py  setup_compile.py  setup_s.py
mypkg/: main.py
mypkg/mod/: __init__.py
